--- a/code/5A_Model_Experiments.ipynb
+++ b/code/5A_Model_Experiments.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "16e2c97a-2a56-417a-9e05-d80b51cca0b2",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "23bc784a-3e0e-45ab-868f-4588ff831348",
    "metadata": {},
    "outputs": [
@@ -71,30 +71,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting hyperopt\n",
-      "  Downloading hyperopt-0.2.7-py2.py3-none-any.whl (1.6 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.6 MB 4.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: py4j in /usr/local/lib/python3.7/site-packages (from hyperopt) (0.10.9.1)\n",
+      "Requirement already satisfied: hyperopt in /home/cdsw/.local/lib/python3.7/site-packages (0.2.7)\n",
       "Requirement already satisfied: numpy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.19.4)\n",
       "Requirement already satisfied: six in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (1.16.0)\n",
-      "Collecting networkx>=2.2\n",
-      "  Downloading networkx-2.6.3-py3-none-any.whl (1.9 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.9 MB 130.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: scipy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.7.3)\n",
-      "Collecting future\n",
-      "  Downloading future-0.18.2.tar.gz (829 kB)\n",
-      "\u001b[K     |████████████████████████████████| 829 kB 130.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: cloudpickle in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (2.2.0)\n",
-      "Collecting tqdm\n",
-      "  Downloading tqdm-4.64.1-py2.py3-none-any.whl (78 kB)\n",
-      "\u001b[K     |████████████████████████████████| 78 kB 1.3 MB/s s eta 0:00:01\n",
-      "\u001b[?25hBuilding wheels for collected packages: future\n",
-      "  Building wheel for future (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for future: filename=future-0.18.2-py3-none-any.whl size=491058 sha256=23963d8238ba82648f9fe5711faa911434868a936bc28e2114e7e60d1ff88e1d\n",
-      "  Stored in directory: /home/cdsw/.cache/pip/wheels/56/b0/fe/4410d17b32f1f0c3cf54cdfb2bc04d7b4b8f4ae377e2229ba0\n",
-      "Successfully built future\n",
-      "Installing collected packages: tqdm, networkx, future, hyperopt\n",
-      "Successfully installed future-0.18.2 hyperopt-0.2.7 networkx-2.6.3 tqdm-4.64.1\n"
+      "Requirement already satisfied: tqdm in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (4.64.1)\n",
+      "Requirement already satisfied: cloudpickle in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (2.2.0)\n",
+      "Requirement already satisfied: future in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (0.18.2)\n",
+      "Requirement already satisfied: scipy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.7.3)\n",
+      "Requirement already satisfied: networkx>=2.2 in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (2.6.3)\n",
+      "Requirement already satisfied: py4j in /usr/local/lib/python3.7/site-packages (from hyperopt) (0.10.9.1)\n"
      ]
     }
    ],
@@ -104,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b1f3d225-c5d4-48bb-a995-5ad40053b902",
    "metadata": {},
    "outputs": [],
@@ -120,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "33470a17-16f0-41d3-bb0c-19fe0a32b204",
    "metadata": {},
    "outputs": [],
@@ -131,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "20b0de11-094f-431d-ab86-1885dc896fa0",
    "metadata": {},
    "outputs": [
@@ -266,7 +251,7 @@
        "4          1           154.0     719.0    13  35.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "3fb1cd6e-2a79-4eaa-8236-4ba9e0e751fa",
    "metadata": {},
    "outputs": [
@@ -303,7 +288,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "5f7139eb-4ae1-42da-a096-06c59c793a6f",
    "metadata": {},
    "outputs": [
@@ -362,7 +347,7 @@
        " 'verbosity': [None]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "76ae9cfb-5170-4a96-8287-fd2a55e2b850",
    "metadata": {},
    "outputs": [],
@@ -443,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "859bbb41-dab5-4136-a0b6-484553541c12",
    "metadata": {},
    "outputs": [],
@@ -464,7 +449,7 @@
     "        # Record AUC as primary loss for Hyperopt to minimize\n",
     "        predictions_test = booster.predict(test)\n",
     "        auc_score = roc_auc_score(y_test, predictions_test)\n",
-    "        mlflow.log_metric('test-auch', auc_score)\n",
+    "        mlflow.log_metric('test-auc', auc_score)\n",
     "\n",
     "        # Set the loss to -1*auc_score so fmin maximizes the auc_score\n",
     "        return {'status': STATUS_OK, 'loss': -auc_score, 'booster': booster.attributes()}\n"
@@ -472,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "29686d4b-217c-49e5-a25d-a4639954e199",
    "metadata": {},
    "outputs": [
@@ -480,8 +465,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: 'Hyperparametersearch' does not exist. Creating a new experiment\n",
-      "  0%|          | 3/9223372036854775807 [21:37<1107825284212636603:44:00, 432.40s/trial, best loss: -0.7296886878141375]\n"
+      "INFO: 'HPsearch' does not exist. Creating a new experiment\n",
+      "  8%|▊         | 2/25 [04:34<59:46, 155.92s/trial, best loss: -0.7153385877466687]"
      ]
     }
    ],
@@ -491,27 +476,27 @@
     "#http://hyperopt.github.io/hyperopt/scaleout/spark/ Working with SPARK trials\n",
     "\n",
     "# # runs initial search to assess 25 hyperparameter combinations\n",
-    "mlflow.set_experiment('Hyperparametersearch')\n",
-    "# with mlflow.start_run(run_name='initial_search'):\n",
-    "#     best_params = fmin(\n",
-    "#       fn=train_model,\n",
-    "#       space=search_space,\n",
-    "#       algo=tpe.suggest,\n",
-    "#       max_evals=25,\n",
-    "#       rstate=np.random.default_rng(123),\n",
-    "#       #trials=spark_trials\n",
-    "#     )\n",
-    "    \n",
-    "    \n",
-    "with mlflow.start_run(run_name='xgb_timeout'):\n",
+    "mlflow.set_experiment('HPsearch')\n",
+    "with mlflow.start_run(run_name='initial_search'):\n",
     "    best_params = fmin(\n",
-    "        fn=train_model,\n",
-    "        space=search_space,\n",
-    "        algo=tpe.suggest,\n",
-    "        timeout=60*10, # stop the grid search after 10 * 60 seconds == 600 minutes\n",
-    "        #trials=spark_trials,\n",
-    "        rstate=np.random.default_rng(123)\n",
+    "      fn=train_model,\n",
+    "      space=search_space,\n",
+    "      algo=tpe.suggest,\n",
+    "      max_evals=25,\n",
+    "      rstate=np.random.default_rng(123),\n",
+    "      #trials=spark_trials\n",
     "    )\n",
+    "    \n",
+    "    \n",
+    "# with mlflow.start_run(run_name='xgb_timeout'):\n",
+    "#     best_params = fmin(\n",
+    "#         fn=train_model,\n",
+    "#         space=search_space,\n",
+    "#         algo=tpe.suggest,\n",
+    "#         timeout=60*10, # stop the grid search after 10 * 60 seconds == 600 minutes\n",
+    "#         #trials=spark_trials,\n",
+    "#         rstate=np.random.default_rng(123)\n",
+    "#     )\n",
     "\n",
     "# with mlflow.start_run(run_name='xgb_loss_threshold'):\n",
     "#     best_params = fmin(\n",
