added hyper parameter tuning code 2

--- a/code/5A_Model_Experiments.ipynb
+++ b/code/5A_Model_Experiments.ipynb
@@ -73,13 +73,13 @@
      "text": [
       "Requirement already satisfied: hyperopt in /home/cdsw/.local/lib/python3.7/site-packages (0.2.7)\n",
       "Requirement already satisfied: numpy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.19.4)\n",
-      "Requirement already satisfied: six in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (1.16.0)\n",
-      "Requirement already satisfied: tqdm in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (4.64.1)\n",
-      "Requirement already satisfied: cloudpickle in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (2.2.0)\n",
-      "Requirement already satisfied: future in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (0.18.2)\n",
       "Requirement already satisfied: scipy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.7.3)\n",
+      "Requirement already satisfied: tqdm in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (4.64.1)\n",
+      "Requirement already satisfied: future in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (0.18.2)\n",
+      "Requirement already satisfied: py4j in /usr/local/lib/python3.7/site-packages (from hyperopt) (0.10.9.1)\n",
       "Requirement already satisfied: networkx>=2.2 in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (2.6.3)\n",
-      "Requirement already satisfied: py4j in /usr/local/lib/python3.7/site-packages (from hyperopt) (0.10.9.1)\n"
+      "Requirement already satisfied: cloudpickle in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (2.2.0)\n",
+      "Requirement already satisfied: six in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (1.16.0)\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "5a64efa7-338e-477e-b8f4-6cb4f5085b6e",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "f66494bd-d971-41d2-bbe7-6f61eaa29bba",
    "metadata": {},
    "outputs": [
@@ -575,20 +575,21 @@
      "text": [
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Not-cancelled       0.69      0.78      0.73    901401\n",
-      "    Cancelled       0.65      0.53      0.59    688758\n",
+      "Not-cancelled       0.69      0.82      0.75    901401\n",
+      "    Cancelled       0.69      0.52      0.59    688758\n",
       "\n",
-      "     accuracy                           0.68   1590159\n",
-      "    macro avg       0.67      0.66      0.66   1590159\n",
-      " weighted avg       0.67      0.68      0.67   1590159\n",
+      "     accuracy                           0.69   1590159\n",
+      "    macro avg       0.69      0.67      0.67   1590159\n",
+      " weighted avg       0.69      0.69      0.68   1590159\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# let us compare the tuned huper parameters with the baseline\n",
-    "xgbclf_tuned = xgb.XGBClassifier(reg_alpha= 1065.0062093171446, colsample_bytree = 0.9872465841573599, gamma = 0.5541673143204452, reg_lambda = 0.3074638463726531, learning_rate = 0.0756626156028201, max_depth = 47, min_child_weight = 11, subsample =1 )\n",
-    "pipe = Pipeline([(\"scaler\", StandardScaler(with_mean=False)), (\"xgbclf_base\", xgbclf_tuned)])\n",
+    "# As can be seen below, just tuning the hyper parameters has improved both the precision and recall scores of the algorithm\n",
+    "xgbclf_tuned = xgb.XGBClassifier(reg_alpha= 0.96984672, colsample_bytree = 0.505001, gamma = 0.0000689998, reg_lambda = 2.1797908, learning_rate = 0.01569332, max_depth = 68, min_child_weight = 5, subsample =1 )\n",
+    "pipe = Pipeline([(\"scaler\", StandardScaler(with_mean=False)), (\"xgbclf_tuned\", xgbclf_tuned)])\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
     "# create classification report\n",
