Updates to reduce model training effort

--- a/code/5A_Model_Experiments.ipynb
+++ b/code/5A_Model_Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "355529d7-7b42-4134-b184-09d870d6f0b2",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "16e2c97a-2a56-417a-9e05-d80b51cca0b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# load the dataset\n",
     "cancelled_flights = pd.read_csv(\"/home/cdsw/data/preprocessed_flight_data.csv\")\n",
     "cancelled_flights = cancelled_flights.dropna()\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "23bc784a-3e0e-45ab-868f-4588ff831348",
    "metadata": {},
    "outputs": [
@@ -72,24 +72,25 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: hyperopt in /home/cdsw/.local/lib/python3.7/site-packages (0.2.7)\n",
-      "Requirement already satisfied: numpy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.19.4)\n",
-      "Requirement already satisfied: scipy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.7.3)\n",
-      "Requirement already satisfied: tqdm in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (4.64.1)\n",
-      "Requirement already satisfied: future in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (0.18.2)\n",
+      "Requirement already satisfied: six in /usr/local/lib/python3.7/site-packages (from hyperopt) (1.15.0)\n",
       "Requirement already satisfied: py4j in /usr/local/lib/python3.7/site-packages (from hyperopt) (0.10.9.1)\n",
       "Requirement already satisfied: networkx>=2.2 in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (2.6.3)\n",
-      "Requirement already satisfied: cloudpickle in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (2.2.0)\n",
-      "Requirement already satisfied: six in /runtime-addons/cmladdon-python-2.0.32-b117/opt/cmladdons/python/site-packages (from hyperopt) (1.16.0)\n"
+      "Requirement already satisfied: future in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (0.18.2)\n",
+      "Requirement already satisfied: tqdm in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (4.64.1)\n",
+      "Requirement already satisfied: scipy in /home/cdsw/.local/lib/python3.7/site-packages (from hyperopt) (1.7.3)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.7/site-packages (from hyperopt) (1.19.4)\n",
+      "Requirement already satisfied: cloudpickle in /runtime-addons/cmladdon-2.0.36-b121/opt/cmladdons/python/site-packages (from hyperopt) (2.2.1)\n"
      ]
     }
    ],
    "source": [
+    "# we install the Hyperopt package for our experiments. \n",
     "!pip install hyperopt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b1f3d225-c5d4-48bb-a995-5ad40053b902",
    "metadata": {},
    "outputs": [],
@@ -101,17 +102,6 @@
     "from hyperopt import fmin, tpe, hp, SparkTrials, STATUS_OK\n",
     "from hyperopt.pyll import scope\n",
     "from sklearn.metrics import roc_auc_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "33470a17-16f0-41d3-bb0c-19fe0a32b204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Option B is gridsearch CV for later\n",
-    "#clf0 = GridSearchCV(estimator=xgbclf, scoring='accuracy', param_grid=default_params, return_train_score=True, verbose=1, cv=3)"
    ]
   },
   {
@@ -257,10 +247,8 @@
     }
    ],
    "source": [
-    "# train/test split\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(X_trans, y, random_state=42)\n",
     "\n",
-    "#this is my Dataset the Label is cancelled 1 or 0\n",
+    "#this is the Flights Dataset the Label is cancelled : 1(True) or 0 (false)\n",
     "cancelled_flights.head()\n"
    ]
   },
@@ -406,14 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "76ae9cfb-5170-4a96-8287-fd2a55e2b850",
    "metadata": {},
    "outputs": [],
    "source": [
     "search_space = {\n",
     "    'learning_rate': hp.loguniform('learning_rate', -7, 0),\n",
-    "    'max_depth': scope.int(hp.uniform('max_depth', 1, 100)),\n",
+    "    'max_depth': scope.int(hp.uniform('max_depth', 1, 10)),\n",
     "    'min_child_weight': hp.loguniform('min_child_weight', -2, 3),\n",
     "    'subsample': hp.uniform('subsample', 0.5, 1),\n",
     "    'colsample_bytree': hp.uniform('colsample_bytree', 0.5, 1),\n",
@@ -428,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "859bbb41-dab5-4136-a0b6-484553541c12",
    "metadata": {},
    "outputs": [],
@@ -442,7 +430,7 @@
     "\n",
     "        # Train model and record run time\n",
     "        start_time = time.time()\n",
-    "        booster = xgb.train(params=params, dtrain=train, num_boost_round=5000, evals=[(test, \"test\")], early_stopping_rounds=50, verbose_eval=False)\n",
+    "        booster = xgb.train(params=params, dtrain=train, num_boost_round=1000, evals=[(test, \"test\")], early_stopping_rounds=50, verbose_eval=False)\n",
     "        run_time = time.time() - start_time\n",
     "        mlflow.log_metric('runtime', run_time)\n",
     "\n",
@@ -457,16 +445,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "29686d4b-217c-49e5-a25d-a4639954e199",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/04/12 07:09:41 INFO mlflow.tracking.fluent: Experiment with name 'HyperParamSearch_V2.0' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: 'HPsearch' does not exist. Creating a new experiment\n",
-      "  8%|▊         | 2/25 [04:34<59:46, 155.92s/trial, best loss: -0.7153385877466687]"
+      "  0%|          | 1/9223372036854775807 [13:41<2105013646150214178:08:00, 821.61s/trial, best loss: -0.7148654522808461]\n"
      ]
     }
    ],
@@ -476,16 +470,16 @@
     "#http://hyperopt.github.io/hyperopt/scaleout/spark/ Working with SPARK trials\n",
     "\n",
     "# # runs initial search to assess 25 hyperparameter combinations\n",
-    "mlflow.set_experiment('HPsearch')\n",
-    "with mlflow.start_run(run_name='initial_search'):\n",
-    "    best_params = fmin(\n",
-    "      fn=train_model,\n",
-    "      space=search_space,\n",
-    "      algo=tpe.suggest,\n",
-    "      max_evals=25,\n",
-    "      rstate=np.random.default_rng(123),\n",
-    "      #trials=spark_trials\n",
-    "    )\n",
+    "mlflow.set_experiment('HyperParamSearch_V2.0')\n",
+    "# with mlflow.start_run(run_name='initial_search'):\n",
+    "#     best_params = fmin(\n",
+    "#       fn=train_model,\n",
+    "#       space=search_space,\n",
+    "#       algo=tpe.suggest,\n",
+    "#       max_evals=25,\n",
+    "#       rstate=np.random.default_rng(123),\n",
+    "#       #trials=spark_trials\n",
+    "#     )\n",
     "    \n",
     "    \n",
     "# with mlflow.start_run(run_name='xgb_timeout'):\n",
@@ -498,21 +492,23 @@
     "#         rstate=np.random.default_rng(123)\n",
     "#     )\n",
     "\n",
-    "# with mlflow.start_run(run_name='xgb_loss_threshold'):\n",
-    "#     best_params = fmin(\n",
-    "#         fn=train_model,\n",
-    "#         space=search_space,\n",
-    "#         algo=tpe.suggest,\n",
-    "#         loss_threshold=-0.92, # stop the grid search once we've reached an AUC of 0.92 or higher\n",
-    "#         timeout=60*10,        # stop after 5 minutes regardless if we reach an AUC of 0.92\n",
-    "#         #trials=spark_trials,\n",
-    "#         rstate=np.random.RandomState(123)\n",
-    "# )"
+    "\n",
+    "# This will take a considerable time and computing power to tune. For the purpose of efficiency, we are stopping the run at 10 minutes\n",
+    "with mlflow.start_run(run_name='xgb_loss_threshold'):\n",
+    "    best_params = fmin(\n",
+    "        fn=train_model,\n",
+    "        space=search_space,\n",
+    "        algo=tpe.suggest,\n",
+    "        loss_threshold=-0.7, # stop the grid search once we've reached an AUC of 0.92 or higher\n",
+    "        timeout=60*10        # stop after 10 minutes regardless if we reach an AUC of 0.92\n",
+    "        #trials=spark_trials,\n",
+    "        # rstate=np.random.RandomState(123) # commenting this because for this version of Hyperopt i am geting an error : numpy.random.mtrand.RandomState' object has no attribute 'integers'\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "3e027d56-65f7-4594-ab48-3f3122d83c89",
    "metadata": {},
    "outputs": [
@@ -520,7 +516,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alpha': 1065.0062093171446, 'colsample_bytree': 0.9872465841573599, 'gamma': 0.5541673143204452, 'lambda': 0.3074638463726531, 'learning_rate': 0.0756626156028201, 'max_depth': 47.254121790375386, 'min_child_weight': 11.318841621569712, 'subsample': 0.5031942542087335}\n"
+      "{'alpha': 0.0058345912286208905, 'colsample_bytree': 0.7443494456406756, 'gamma': 12.12388434552391, 'lambda': 0.06723169306696562, 'learning_rate': 0.010124899119105817, 'max_depth': 7.146365210529202, 'min_child_weight': 8.07334234933159, 'subsample': 0.6592007721546468}\n"
      ]
     }
    ],
@@ -530,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "5a64efa7-338e-477e-b8f4-6cb4f5085b6e",
    "metadata": {},
    "outputs": [
@@ -551,7 +547,7 @@
     }
    ],
    "source": [
-    "# let us compare base line\n",
+    "# let us check the baseline  base line\n",
     "xgbclf_base = xgb.XGBClassifier()\n",
     "pipe = Pipeline([(\"scaler\", StandardScaler(with_mean=False)), (\"xgbclf_base\", xgbclf_base)])\n",
     "pipe.fit(X_train, y_train)\n",
@@ -575,21 +571,20 @@
      "text": [
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Not-cancelled       0.69      0.82      0.75    901401\n",
-      "    Cancelled       0.69      0.52      0.59    688758\n",
+      "Not-cancelled       0.69      0.78      0.73    901401\n",
+      "    Cancelled       0.65      0.53      0.59    688758\n",
       "\n",
-      "     accuracy                           0.69   1590159\n",
-      "    macro avg       0.69      0.67      0.67   1590159\n",
-      " weighted avg       0.69      0.69      0.68   1590159\n",
+      "     accuracy                           0.68   1590159\n",
+      "    macro avg       0.67      0.66      0.66   1590159\n",
+      " weighted avg       0.67      0.68      0.67   1590159\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# let us compare the tuned huper parameters with the baseline\n",
-    "# As can be seen below, just tuning the hyper parameters has improved both the precision and recall scores of the algorithm\n",
-    "xgbclf_tuned = xgb.XGBClassifier(reg_alpha= 0.96984672, colsample_bytree = 0.505001, gamma = 0.0000689998, reg_lambda = 2.1797908, learning_rate = 0.01569332, max_depth = 68, min_child_weight = 5, subsample =1 )\n",
-    "pipe = Pipeline([(\"scaler\", StandardScaler(with_mean=False)), (\"xgbclf_tuned\", xgbclf_tuned)])\n",
+    "# let us compare the tuned huper parameters from an earlier experiment with the baseline\n",
+    "xgbclf_tuned = xgb.XGBClassifier(reg_alpha= 1065.0062093171446, colsample_bytree = 0.9872465841573599, gamma = 0.5541673143204452, reg_lambda = 0.3074638463726531, learning_rate = 0.0756626156028201, max_depth = 47, min_child_weight = 11, subsample =1 )\n",
+    "pipe = Pipeline([(\"scaler\", StandardScaler(with_mean=False)), (\"xgbclf_base\", xgbclf_tuned)])\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
     "# create classification report\n",
@@ -598,21 +593,11 @@
     "cls_report = classification_report(y_test, y_pred, target_names=targets)\n",
     "print(cls_report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0aff314-1f2e-42ce-9a6c-a87df9af02f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Since the training time is significant for this large dataset. Let us consider Distributed Training"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -626,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
