optimized for HP training

--- a/code/5A_Model_Experiments.ipynb
+++ b/code/5A_Model_Experiments.ipynb
@@ -470,27 +470,7 @@
     "#http://hyperopt.github.io/hyperopt/scaleout/spark/ Working with SPARK trials\n",
     "\n",
     "# # runs initial search to assess 25 hyperparameter combinations\n",
-    "mlflow.set_experiment('HyperParamSearch_V2.0')\n",
-    "# with mlflow.start_run(run_name='initial_search'):\n",
-    "#     best_params = fmin(\n",
-    "#       fn=train_model,\n",
-    "#       space=search_space,\n",
-    "#       algo=tpe.suggest,\n",
-    "#       max_evals=25,\n",
-    "#       rstate=np.random.default_rng(123),\n",
-    "#       #trials=spark_trials\n",
-    "#     )\n",
-    "    \n",
-    "    \n",
-    "# with mlflow.start_run(run_name='xgb_timeout'):\n",
-    "#     best_params = fmin(\n",
-    "#         fn=train_model,\n",
-    "#         space=search_space,\n",
-    "#         algo=tpe.suggest,\n",
-    "#         timeout=60*10, # stop the grid search after 10 * 60 seconds == 600 minutes\n",
-    "#         #trials=spark_trials,\n",
-    "#         rstate=np.random.default_rng(123)\n",
-    "#     )\n",
+    "mlflow.set_experiment('HPSearch')\n",
     "\n",
     "\n",
     "# This will take a considerable time and computing power to tune. For the purpose of efficiency, we are stopping the run at 10 minutes\n",
@@ -501,9 +481,19 @@
     "        algo=tpe.suggest,\n",
     "        loss_threshold=-0.7, # stop the grid search once we've reached an AUC of 0.92 or higher\n",
     "        timeout=60*10        # stop after 10 minutes regardless if we reach an AUC of 0.92\n",
-    "        #trials=spark_trials,\n",
-    "        # rstate=np.random.RandomState(123) # commenting this because for this version of Hyperopt i am geting an error : numpy.random.mtrand.RandomState' object has no attribute 'integers'\n",
-    ")"
+    ")\n",
+    "\n",
+    "#Option 2: You could wait for it to complete 25 Epochs\n",
+    "# with mlflow.start_run(run_name='initial_search'):\n",
+    "#     best_params = fmin(\n",
+    "#       fn=train_model,\n",
+    "#       space=search_space,\n",
+    "#       algo=tpe.suggest,\n",
+    "#       max_evals=25,\n",
+    "#       rstate=np.random.default_rng(123),\n",
+    "#       #trials=spark_trials\n",
+    "#     )\n",
+    "    \n"
    ]
   },
   {
